deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: awesome-app
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
        - name: awesome-app
          image: murzayev/otus_kuber_part_2:v1
          ports:
            - containerPort: 80
              name: web
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 2
