service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-service
spec:
  selector:
    app: awesome-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
